[package]
name = "waypaper-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bitflags = "2.10.0" # umm idk why but wlr_layer_shell needs this
image = "0.25.8"
log = "0.4.28"
memmap2 = "0.9.8"
tempfile = "3.23.0"
wayland-backend = "0.3.11"
wayland-client = "0.31.11"
wayland-protocols = {version = "0.32.9", features = ["client", "staging"]}
wayland-scanner = "0.31.7"
